# fibsum

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
compose/: Dockerfile  nginx.conf  start
fibsum/: app.py  config.py  manage.py  wsgi.py
fibsum/api/: __init__.py  views.py
fibsum/api/resources/: __init__.py  fib.py  system.py
fibsum/services/: chekers.py  fibsum.py  health_check.py
tests/: test_healthcheck.py
